posiGen_FullsendBox/src/objects/Projected_Savings__c.object
<CustomObject>
    <fields>
        <fullName>Array_Type__c</fullName>
        <label>Array Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed (open rack)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed (roof mount)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Axis Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Axis Backtracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Axis Tracking</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Usage__c</fullName>
        <description>Customers may enter EITHER monthly average usage in kWh OR actual figures from their bills.</description>
        <label>Average Monthly Usage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Utility_Bill__c</fullName>
        <description>Customers may enter EITHER monthly average OR actual figures from their bills.</description>
        <label>Average Monthly Utility Bill</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Cost_of_Electricity_from_Util_kWh__c</fullName>
        <description>PVWatts Estimate field</description>
        <label>Avg Cost of Electricity from Util $/kWh</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Azimuth_Degrees__c</fullName>
        <label>Azimuth Degrees</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Avg_Cost_of_Elec_Purc_fr_Util_kW2__c</fullName>
        <formula>IF( Rollup_Year_Total_Production_kWh__c = 0, 0, ( Rollup_Year_Total_Savings_Dollars__c / Rollup_Year_Total_Production_kWh__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Avg Cost of Elec Purc fr Util $/kW2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Of_Projected_Months__c</fullName>
        <label>Count Of Projected Months</label>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_For_Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Lead Id for this Projected Savings.</description>
        <label>Created For Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Projected_Savings</relationshipLabel>
        <relationshipName>Projected_Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_System_Size_kW__c</fullName>
        <label>DC System Size (kW)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_to_AC_Size_Ratio__c</fullName>
        <label>DC to AC Size Ratio</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Electrical_Savings_yr__c</fullName>
        <label>EU Projected Electrical Savings $/yr</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_EU_Projected_Electrical_Savings__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Electrical_kWh_yr_Savings__c</fullName>
        <label>EU Projected Electrical kWh/yr Savings</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_EU_Projected_Electrical_kWh_Saving__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Savings_yr__c</fullName>
        <label>EU Projected Nat Gas Savings $/yr</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_EU_Projected_Nat_Gas_Savings__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Therms_yr_Savings__c</fullName>
        <label>EU Projected Nat Gas Therms/yr Savings</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_EU_Projected_NatGas_Therms_Savings__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Flights_saved_projection__c</fullName>
        <label>Flights saved projection</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Cost_Wdc__c</fullName>
        <label>Initial Cost $/Wdc</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Efficiency_Pct__c</fullName>
        <label>Inverter Efficiency Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Numeric_Id_Text__c</fullName>
        <description>Lead Numeric ID, either from the linked Opportunity if available or from the linked Lead if no Opportunity exists yet.</description>
        <formula>IF( OR( ISBLANK( Opportunity_Id__c ) , ISNULL( Opportunity_Id__c ) ) ,  Created_For_Lead_Id__r.Numeric_ID_Copy_For_Conversion__c ,  Opportunity_Id__r.Lead_Numeric_ID_Text__c )</formula>
        <label>Lead Numeric Id Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <description>Use to calculate net savings projection over life of the lease</description>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Months__c</fullName>
        <description>Use to calculate net savings projection over life of the lease</description>
        <label>Lease Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationCity__c</fullName>
        <description>Location City for the address of the projected savings</description>
        <label>LocationCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCountry__c</fullName>
        <label>LocationCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationLat__c</fullName>
        <label>LocationLat</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationLng__c</fullName>
        <label>LocationLng</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationPostalCode__c</fullName>
        <label>LocationPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationState__c</fullName>
        <description>Location State for projected savings</description>
        <label>LocationState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationStreet__c</fullName>
        <description>Street Address of the location for projected savings</description>
        <label>LocationStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thin Film</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projected_Savings</relationshipLabel>
        <relationshipName>Projected_Savings_LeadNumeric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Net_Annual_kWh_Used__c</fullName>
        <formula>Year_Total_Bill_Usage_kWh__c - Rollup_Year_Total_Production_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Net Annual kWh Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Net_Year_Total_Bill__c</fullName>
        <formula>Year_Total_Bill_Dollars__c - Rollup_Year_Total_Savings_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Net Year Total Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Savings_First_Year_Dollars__c</fullName>
        <formula>Rollup_Year_Total_Savings_Dollars__c - Year_Total_Bill_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Savings First Year Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Savings_First_Year_kWh__c</fullName>
        <formula>Rollup_Year_Total_Production_kWh__c - Year_Total_Bill_Usage_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Savings First Year kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Year_Total_Production_kWh__c</fullName>
        <label>Rollup Year Total Production kWh</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_Production_kWh__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Year_Total_Savings_Dollars__c</fullName>
        <label>Rollup Year Total Savings Dollars</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_Savings_Dollars__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Year_Total_Solar_Radiation__c</fullName>
        <label>Rollup Year Total Solar Radiation</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_Solar_Radiation__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steep</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Losses_Pct__c</fullName>
        <label>System Losses Pct</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tilt_Degrees__c</fullName>
        <label>Tilt Degrees</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trees_saved_projection__c</fullName>
        <label>Trees saved projection</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truck_miles_saved_projection__c</fullName>
        <label>Truck miles saved projection</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Actual_Utility_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that usage figures from 12 months of actual utility bills will be entered. Leave unchecked to enter average utility bill and usage figures.</description>
        <inlineHelpText>Check this box to indicate that usage figures from 12 months of actual utility bills will be entered. Leave unchecked to enter average utility bill and usage figures.</inlineHelpText>
        <label>Use Actual Utility Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weather_Station_City__c</fullName>
        <label>Weather Station City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Distance__c</fullName>
        <label>Weather Station Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Elev__c</fullName>
        <label>Weather Station Elev</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Filename__c</fullName>
        <label>Weather Station Filename</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Lat__c</fullName>
        <label>Weather Station Lat</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Lng__c</fullName>
        <label>Weather Station Lng</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather_Station_Location__c</fullName>
        <label>Weather Station Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Station_State__c</fullName>
        <label>Weather Station State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Station_TZ_Offset__c</fullName>
        <label>Weather Station TZ Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Total_AC_Energy_kWh__c</fullName>
        <label>Year Total AC Energy kWh</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Total_Bill_Dollars__c</fullName>
        <label>Year Total Bill Dollars</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_Bill_Dollars__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Total_Bill_Usage_kWh__c</fullName>
        <label>Year Total Bill Usage kWh</label>
        <summarizedField>Projected_Savings_Line_Item__c.Month_Bill_Usage_kWh__c</summarizedField>
        <summaryForeignKey>Projected_Savings_Line_Item__c.Projected_Savings__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Total_Energy_Value_Dollars__c</fullName>
        <label>Year Total Energy Value Dollars</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Total_Solar_Radiation__c</fullName>
        <label>Year Total Solar Radiation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Projected Savings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Avg_Cost_of_Electricity_from_Util_kWh__c</columns>
        <columns>Year_Total_AC_Energy_kWh__c</columns>
        <columns>Year_Total_Bill_Usage_kWh__c</columns>
        <columns>Year_Total_Bill_Dollars__c</columns>
        <columns>Year_Total_Energy_Value_Dollars__c</columns>
        <columns>Count_Of_Projected_Months__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Projected Savings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected_Savings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EnterAverages_If_UseActuals_Unchecked</fullName>
        <active>true</active>
        <description>If &quot;Use Actuals&quot; is not checked, averages must be entered.</description>
        <errorConditionFormula>and ( Use_Actual_Utility_Bills__c == FALSE, 
      or ( Average_Monthly_Usage__c == 0,
           Average_Monthly_Utility_Bill__c == 0 ))</errorConditionFormula>
        <errorMessage>You must enter average monthly billing and usage figures here or check the &quot;Use Actuals&quot; box.</errorMessage>
    </validationRules>
</CustomObject>